--- a/.editorconfig
+++ b/.editorconfig
@@ -13,8 +13,8 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.txt]
-trim_trailing_whitespace = false
-
 [*.json]
+indent_size = 2
+tab_width = 2
+indent_style = space
 insert_final_newline = false
